--- a/fraudbuster-ui/package.json
+++ b/fraudbuster-ui/package.json
@@ -89,6 +89,7 @@
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "npm-check-updates": "^19.1.2",
+    "papaparse": "^5.5.3",
     "path-to-regexp": "^8.3.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
@@ -96,6 +97,7 @@
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.66.0",
     "react-hot-toast": "^2.6.0",
     "react-markdown": "^10.1.0",
@@ -119,6 +121,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "eslint": "^9.39.0",
