--- a/fraudbuster-ui/package.json
+++ b/fraudbuster-ui/package.json
@@ -89,6 +89,7 @@
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "npm-check-updates": "^19.1.2",
+    "openai": "^6.7.0",
     "papaparse": "^5.5.3",
     "path-to-regexp": "^8.3.0",
     "postcss": "^8.5.6",
@@ -103,6 +104,7 @@
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^3.3.0",
+    "remark-gfm": "^4.0.1",
     "rooks": "^9.3.0",
     "semantic-release": "^25.0.1",
     "server-only": "^0.0.1",
@@ -120,6 +122,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19.2.2",
